src/app/components/video-slider/video-slider.component.scss
@import "../../wiof-custom-theming.scss";

.video-card-footer {
  background-color: white;
  border-top: 1px solid lightgrey;
  position: absolute;
  bottom: 0;
  width: 100%;
  color: $dark-color;
}

.video-card {
  min-width: 20%;
  height: calc(100% - 20px);
  // padding-bottom: 50px;
}

.thumbnailImage {
  align-self: center;
  width: 320px;
}

.wiof-slider-header {
  border-bottom: white 2px solid;
  color: $dark-color;
}

// /* Using SCSS variables to store breakpoints */
// $breakpoint-desktop: 1024px;
// $breakpoint-tablet: 767px;
// $breakpoint-mobile: 480px;

// //xsmall view from 0 to 479
// @media (max-width: $breakpoint-mobile){
//   .thumbnailImage{
//     width:320px;
//   }
// }

// //small view from 480 to 766
// @media (max-width: $breakpoint-tablet){
//   .thumbnailImage{
//     width:320px;
//   }
// }

// //medium view from 767 to 1023
// @media (max-width: $breakpoint-desktop){
//   .thumbnailImage{
//     width:249.5px;
//   }
// }

// //large view 1024 and above
// @media (min-width: $breakpoint-desktop){
//   .thumbnailImage{
//     width:249.5px;
//   }
// }

.wiof-spinner {
  position: absolute;
  left: 50%;
}

@mixin video-card-style($color) {
  background-color: $color;
  &.background {
    background-color: rgba($color, $tint-fraction);
  }
}

.wiof-earth {
  @include video-card-style($earth-color);
}

.wiof-water {
  @include video-card-style($water-color);
}

.wiof-fire {
  @include video-card-style($energy-color);
}

.wiof-air {
  @include video-card-style($air-color);
}

.wiof-spirit {
  @include video-card-style($spirit-color);
}

.show-more-card {
  height: calc(100% - 20px);
  width: 100%;
  padding-top: 30%;
  cursor: pointer;

  p {
    font-size: 20px;

    ion-icon {
      font-size: 30px;
    }
  }
}

.swiper-slide {
  height: auto;
}

.video-title {
  text-decoration: none;
}

